# Planning-w-llms

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  idea-and-todo.md  main.py  package.json  pyproject.toml  to-do.md  todo.md  tsconfig.json
.claude/: settings.local.json
db/local/: docker-compose.yml
db/migrations/: V2__create_conversations_table.sql
docs/: Frame-Grounded-Hierarchical-Planning-Summary.docx  arch-plan.drawio
floorplan-qa/: CMakeLists.txt  README.md  generation-quality.md  pyproject.toml  question-gen.md  result.md
floorplan-qa/dataset/train-qa/: questions.jsonl
floorplan-qa/experiments/tool-loop/: iteration-1-feedback.json  iteration-1-results.json  iteration-2-feedback.json  iteration-2-results.json  iteration-3-feedback.json  iteration-3-results.json  summary.json
floorplan-qa/experiments/tool-loop-200/: iteration-3-feedback.json  iteration-3-results.json  iteration-4-feedback.json  iteration-4-results.json  iteration-5-feedback.json  iteration-5-results.json  iteration-6-feedback.json  iteration-6-results.json  summary.json
floorplan-qa/scripts/: compare_geometry_backends.py  evaluate_generation.sh  evaluate_huggingface.sh  evaluate_ollama.sh  evaluate_ollama_random.sh  evaluate_ollama_tools.sh  generate_questions.sh
floorplan-qa/src/floorplan_qa/: __init__.py  _cgal_geometry.cpp  cgal_geometry.py  checkout_tooling.py  download_dataset.py  evaluate_jsonl.py  evaluate_tools.py  floorplan_tools.py  generate_questions.py  geometry.py  quality_metrics.py
floorplan-qa/tests/: test_evaluate_jsonl.py  test_floorplan_tools.py  test_generate_questions.py  test_geometry.py
scripts/: db-local-launch.sh  db-local-stop.sh  embed_corpus.py  search.py
src/: campsite-cooking-rain.html  drive-demo-havok.ts  drive-demo-three.html  drive-demo.ts  hello.ts
