[project]
name = "floorplan-qa"
version = "0.1.0"
description = "Utilities for working with the FloorplanQA layouts dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.0",
    "mlx-lm>=0.31.3",
]

[project.scripts]
download-floorplan-qa = "floorplan_qa.download_dataset:main"
checkout-fpqa-tooling = "floorplan_qa.checkout_tooling:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/floorplan_qa"]
