[project]
name = "floorplan-qa"
version = "0.1.0"
description = "Utilities for working with the FloorplanQA layouts dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.0",
    "mlx-lm>=0.31.3",
    "scipy>=1.13",
    "shapely>=2.0.0",
]

[project.scripts]
download-floorplan-qa = "floorplan_qa.download_dataset:main"
checkout-fpqa-tooling = "floorplan_qa.checkout_tooling:main"
generate-floorplan-qa = "floorplan_qa.generate_questions:main"
evaluate-floorplan-qa-generation = "floorplan_qa.quality_metrics:main"

[build-system]
requires = [
    "pybind11>=2.13",
    "scikit-build-core>=0.11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/floorplan_qa"]
